--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="profile">
       <img class="profile-img" src="images/mypic.png" alt="arsh-img">
       <h2>Hello.</h2>
-      <p class="intro">I am a Quality Assurance Engineer at OPPO India. <br>I hold a bachelor's degree in Computer Engineering. <br>I ❤ Maggi. Coffee in my best friend when I am at work.</p>
+      <p class="intro">I am a Quality Assurance Engineer at OPPO India. <br>I hold a bachelor's degree in Computer Engineering. <br>I ❤ Maggi. Coffee is my best friend when I am at work.</p>
     </div>
     <hr>
     <div class="skills">
